deployment/base/maas-api/overlays/tls/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: maas-api
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: maas-api-serving-cert
spec:
  ports:
  - $patch: replace
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: metrics
